[Feat]: 올바른 태그 값이 들어오는지 검사